--- a/index.html
+++ b/index.html
@@ -101,23 +101,28 @@
           </div>
 
           <div class="container3">
-            <img src="images/cam.png" class="cam" alt="">
+            <img src="images/vs.svg" class="cam" alt="">
             <div class="photo-video">
-              <p class="motion-heading flex-disp">Don't Blink</p>
-              <p class="sub-motion-heading flex-disp">(Motion Graphics)</p>
-              <img src="images/mac.svg" id="mac"  alt="">
-              <video id="dont" controls src="videos/Don't blink.mp4" ></video>
-              <p class="motion-heading1 flex-disp">Logo Reveal</p>
-              <p class="sub-motion-heading1 flex-disp">(Motion Graphics)</p>
-              <img src="images/mac.svg" id="mac1"  alt="">
-              <video id="logo" controls src="videos/Logo reveal.mp4" ></video>
-              <img src="images/ae.svg" alt="" class="ae">
-              <img src="images/ae.svg" alt="" class="ae1">
+              <p class="motion-heading flex-disp skew">Motion <br>Graphics</p>
+              <p class="sub-motion-heading flex-disp skew">Don'T BLinK</p>
+              <div class="wrapper skew">
+                <div class="gradient1"></div>
+                <video id="dont" loop muted src="videos/Don't blink.mp4" ></video>
+              </div>
+              <p class="motion-heading1 flex-disp skew">Motion <br>Graphics</p>
+              <p class="sub-motion-heading1 flex-disp skew">Logo ReVeaL</p>
+              <div class="wrapper skew">
+                <div class="gradient1"></div>
+                <video id="logo" loop muted src="videos/Logo reveal.mp4" ></video>
+              </div>
+              <img src="images/ae.svg" alt="" class="ae skew">
+              <img src="images/ae.svg" alt="" class="ae1 skew">
+              <div class="web-dev">
+                <p class="motion-heading2 flex-disp skew">Excursy Online Laptop Shopping</p>
+                <p class="sub-motion-heading1 flex-disp skew">Website</p>
+              </div>
             </div>
-            <div class="web-dev">
-            </div>
-          </div>
-          
+          </div> 
         </div> 
       </section>
     </Section>
