--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
               <p class="sub-motion-heading flex-disp skew">Don'T BLinK</p>
               <div class="wrapper skew">
                 <div class="gradient1"></div>
-                <video id="dont" loop muted src="videos/Don't blink.mp4" ></video>
+                <video id="dont" loop autoplay muted src="videos/Don't blink.mp4" ></video>
               </div>
               <p class="motion-heading1 flex-disp skew">Motion <br>Graphics</p>
               <p class="sub-motion-heading1 flex-disp skew">Logo ReVeaL</p>
               <div class="wrapper skew">
                 <div class="gradient1"></div>
-                <video id="logo" loop muted src="videos/Logo reveal.mp4" ></video>
+                <video id="logo" loop autoplay muted src="videos/Logo reveal.mp4" ></video>
               </div>
               <img src="images/ae.svg" alt="" class="ae skew">
               <img src="images/ae.svg" alt="" class="ae1 skew">
