--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body>
 
     <nav id="nav-div">
-      <div class="skewElem logo">
+      <div class=" logo">
         <a href="index.html" class="logo">VaRaD<br />NILaKhe</a>
       </div>
-      <div class="skewElem logo">
+      <div class=" logo">
         <a href="#" id="aboutpage-nav">CoNtacT ></a>
       </div>
     </nav>
@@ -28,9 +28,9 @@
 
     <Section class="smooth">
       <section class="first">
-        <div class="inside-first">
+        <div class="inside-first skew">
           <div id="home-intro " class="slide1">
-            <h1 class="welcome-text ">Welcome To The</h1>
+            <h1 class="welcome-text">Welcome To The</h1>
           </div>
             <div id="home-intro" class="slide2">
               <h1 class="welcome-text">Playground</h1>
@@ -61,7 +61,7 @@
               <h1 class="welcome-text slide5">NiLaKhe</h1>
             </div>
           </div>
-          <div class="art-text">
+          <div class="art-text skew">
             <p id="arttext">Art</p>
           </div>
           <div class="red-arrow flex-disp">
@@ -80,21 +80,21 @@
             </div>
           </div>
           <div class="container2">
-            <div class="text">
+            <div class="text ">
               <p class="opaci" id="text1" >I always strive to develop <br>
                 unique design solutions <br>
                 and improve the <br>
                 QuaLity of life.</p>
             </div>
-            <div class="work-heading ">
+            <div class="work-heading skew ">
               <div class="work flex-disp">
-                <span class="wrkhead wrk1 skew">SoMe of</span>
+                <span class="wrkhead wrk1 ">SoMe of</span>
               </div>
               <div class="work flex-disp">
-                <span class="wrkhead wrk2 skew">My SelecTed</span>
+                <span class="wrkhead wrk2 ">My SelecTed</span>
               </div>
               <div class="work flex-disp ">
-                <span class="wrkhead wrk3 skew">WoRkS</span>
+                <span class="wrkhead wrk3 ">WoRkS</span>
               </div>
               <img id="highlight" src="images/circle.svg" alt="" >
             </div>
@@ -105,24 +105,41 @@
             <div class="photo-video">
               <p class="motion-heading flex-disp skew">Motion <br>Graphics</p>
               <p class="sub-motion-heading flex-disp skew">Don'T BLinK</p>
-              <div class="wrapper skew">
+              <div class="wrapper ">
                 <div class="gradient1"></div>
-                <video id="dont" loop autoplay muted src="videos/Don't blink.mp4" ></video>
+                <video id="dont"  loop muted src="videos/Don't blink.mp4" ></video>
               </div>
               <p class="motion-heading1 flex-disp skew">Motion <br>Graphics</p>
               <p class="sub-motion-heading1 flex-disp skew">Logo ReVeaL</p>
-              <div class="wrapper skew">
+              <div class="wrapper ">
                 <div class="gradient1"></div>
-                <video id="logo" loop autoplay muted src="videos/Logo reveal.mp4" ></video>
+                <video id="logo" loop muted src="videos/Logo reveal.mp4" ></video>
               </div>
-              <img src="images/ae.svg" alt="" class="ae skew">
-              <img src="images/ae.svg" alt="" class="ae1 skew">
+              <img src="images/ae.svg" alt="" class="ae ">
+              <img src="images/ae.svg" alt="" class="ae1 ">
               <div class="web-dev">
                 <p class="motion-heading2 flex-disp skew">Excursy Online Laptop Shopping</p>
                 <p class="sub-motion-heading1 flex-disp skew">Website</p>
               </div>
+              <p class="visit-ctn flex-disp">Visit the web ></p>
+              <div class="webimg flex-disp">
+                <img src="images/Image 21.jpg" alt="" class="webapp im1">
+              <img src="images/Image 24.jpg" alt="" class="webapp ">
+              <img src="images/Image 23.jpg" alt="" class="webapp im1">
+              
+              </div>
+              <div class="webimg2 flex-disp">
+                <img src="images/Image 22.jpg" alt="" class="webapp1 ">
+              <img src="images/Image 25.jpg" alt="" class="webapp1 ">
+              </div>
             </div>
-          </div> 
+            <div class="skills">
+              <p class="heading-1">TecH StacK</p>
+              <p class="heading-2"><span class="text-pink">SKills</span> aNd <span class="text-pink">tecH</span><br> thAt i Can heLp you With</p>
+            </div>
+            <div class="new1 transform" id="new"><p class="exp">. web deveLopment . Illustrations . Design . motion Graphics . Video editing </p></div>
+            <div class="new1 transform1" id="new"><p class="exp1">. web deveLopment . Illustrations . Design . motion Graphics . Video editing </p></div>
+          </div>
         </div> 
       </section>
     </Section>
