--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <h1 class="welcome-text slide5">NiLaKhe</h1>
             </div>
           </div>
-          <div class="art-text skew">
+          <div class="art-text">
             <p id="arttext">Art</p>
           </div>
           <div class="red-arrow flex-disp">
@@ -107,13 +107,13 @@
               <p class="sub-motion-heading flex-disp skew">Don'T BLinK</p>
               <div class="wrapper ">
                 <div class="gradient1"></div>
-                <video id="dont"  loop muted src="videos/Don't blink.mp4" ></video>
+                <video id="dont" autoplay loop muted src="videos/Don't blink.mp4" ></video>
               </div>
               <p class="motion-heading1 flex-disp skew">Motion <br>Graphics</p>
               <p class="sub-motion-heading1 flex-disp skew">Logo ReVeaL</p>
               <div class="wrapper ">
                 <div class="gradient1"></div>
-                <video id="logo" loop muted src="videos/Logo reveal.mp4" ></video>
+                <video id="logo" autoplay loop muted src="videos/Logo reveal.mp4" ></video>
               </div>
               <img src="images/ae.svg" alt="" class="ae ">
               <img src="images/ae.svg" alt="" class="ae1 ">
