--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <Section class="smooth">
       <section class="first">
-        <div class="inside-first skew">
+        <div class="inside-first">
           <div id="home-intro " class="slide1">
             <h1 class="welcome-text">Welcome To The</h1>
           </div>
@@ -86,7 +86,7 @@
                 and improve the <br>
                 QuaLity of life.</p>
             </div>
-            <div class="work-heading skew ">
+            <div class="work-heading ">
               <div class="work flex-disp">
                 <span class="wrkhead wrk1 ">SoMe of</span>
               </div>
@@ -103,14 +103,14 @@
           <div class="container3">
             <img src="images/vs.svg" class="cam" alt="">
             <div class="photo-video">
-              <p class="motion-heading flex-disp skew">Motion <br>Graphics</p>
-              <p class="sub-motion-heading flex-disp skew">Don'T BLinK</p>
+              <p class="motion-heading flex-disp">Motion <br>Graphics</p>
+              <p class="sub-motion-heading flex-disp">Don'T BLinK</p>
               <div class="wrapper ">
                 <div class="gradient1"></div>
                 <video id="dont" autoplay loop muted src="videos/Don't blink.mp4" ></video>
               </div>
-              <p class="motion-heading1 flex-disp skew">Motion <br>Graphics</p>
-              <p class="sub-motion-heading1 flex-disp skew">Logo ReVeaL</p>
+              <p class="motion-heading1 flex-disp">Motion <br>Graphics</p>
+              <p class="sub-motion-heading1 flex-disp">Logo ReVeaL</p>
               <div class="wrapper ">
                 <div class="gradient1"></div>
                 <video id="logo" autoplay loop muted src="videos/Logo reveal.mp4" ></video>
@@ -118,8 +118,8 @@
               <img src="images/ae.svg" alt="" class="ae ">
               <img src="images/ae.svg" alt="" class="ae1 ">
               <div class="web-dev">
-                <p class="motion-heading2 flex-disp skew">Excursy Online Laptop Shopping</p>
-                <p class="sub-motion-heading1 flex-disp skew">Website</p>
+                <p class="motion-heading2 flex-disp">Excursy Online Laptop Shopping</p>
+                <p class="sub-motion-heading1 flex-disp">Website</p>
               </div>
               <p class="visit-ctn flex-disp">Visit the web ></p>
               <div class="webimg flex-disp">
