--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
                 <p class="motion-heading2 flex-disp ">Excursy Online Laptop Shopping</p>
                 <p class="sub-motion-heading1 flex-disp ">Website</p>
               </div>
-              <p class="visit-ctn flex-disp">Visit the web ></p>
+<!--               <p class="visit-ctn flex-disp">Visit the web ></p> -->
+              <a href="https://excursy-shopping.herokuapp.com/" class="visit-ctn flex-disp">Visit the website ></a>
               <div class="webimg flex-disp">
                 <img src="images/Image 21.jpg" alt="" class="webapp im1">
               <img src="images/Image 24.jpg" alt="" class="webapp ">
